--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -27,17 +27,18 @@ $$
 
 ## Random sampling process
 
-Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have a infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, because we sampled from **a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 and the population variance is YY.
+Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have a infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, **because we sampled from a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 and the population variance is YY.
 
 [Figure 1A and 1B goes here]
 
 ##Population: What’s in a name
 
-Typically, in psychology, when we use the word population we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population.  Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA). 
+Typically, in psychology, when we use the word "population" we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population.  Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA). 
 
 ### Distribution of sample means as a population
 
-In this chapter, our focus is on the distribution of sample means. The mean of the population sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution). I know it doesn't make sense the divided by infinity per se - in formal mathematics we would write this up in a different way describing things in terms of *expected value*.
+Since we are thinking of the distribution of sample means as a population we can calculate a mean a variance for the distribution of sample means.
+The mean of the population of sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)\footnote{I know it doesn't make sense the divided by infinity per se; however, in formal mathematics we would write this up in a different way describing the resulted value as an *expected value*.}.
 
 $$
 \begin{aligned} 
@@ -45,7 +46,7 @@ $$
 \end{aligned} 
 $$
 
-The mean of the sample means, \mu_{\bar{x}}, will always be the same as that of the individuals heights, \mu_{people}. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that our conclusion will also apply to Figure 1A because the mean of Figure 1A and Figure 1B will always be the same.
+The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that our conclusion will also apply to Figure 1A because the mean of Figure 1A and Figure 1B will always be the same.
 
 ## Variance of the distribution of sampling means
 
