--- a/book.bib
+++ b/book.bib
@@ -454,3 +454,11 @@
   publisher={Am Soc Microbiol}
 }
 
+@article{leys2019classify,
+  title={How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration},
+  author={Leys, Christophe and Delacre, Marie and Mora, Youri L and Lakens, Dani{\"e}l and Ley, Christophe},
+  journal={International Review of Social Psychology},
+  volume={32},
+  number={1},
+  year={2019}
+}
