--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -2,7 +2,9 @@
 
 ## OSF
 
-You can pre-register your study and upload your study materials via a free account at the [OSF](https://osf.io). 
+You can pre-register your study and upload your study materials via a free account at the [OSF](https://osf.io). Don't forget you should also pre-register your outlier strategy. See [@leys2019classify] for guidance.
+
+[Leys, C., Delacre, M., Mora, Y. L., Lakens, D., & Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).](https://biblio.ugent.be/publication/8619726/file/8646347.pdf)
 
 ## Journal ranking via the TOP Factor
 
@@ -63,7 +65,7 @@ Some other great resources:
 
 ### papaja
 
-You may also find the [papaja package](https://github.com/crsh/papaja) by Frederik Aust helpful. It's an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to make an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja).
+You may also find the [papaja package](https://github.com/crsh/papaja) by Frederik Aust helpful. It's an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to make an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja). 
 
 I suggest you read the extensive papaja (documentation)[https://crsh.github.io/papaja_man/introduction.html]. It will be worth your while!
 
