--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -8,7 +8,7 @@ output:
 
 Consider a scenario where there is a large university with 50,000 students and we have the heights of all 50,000 students. The mean height  of all 50,000 students is XX and the variance is YY The heights of all the university students are illustrated in Figure 1A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
 
-The mean and variance of the population people’s heights is calculated as below (where N = 50,000).
+The mean of the population people’s heights is calculated as below (where N = 50,000).
 
 $$
 \begin{aligned} 
@@ -17,10 +17,11 @@ $$
 \end{aligned} 
 $$
 
+The variance of the population people’s heights is calculated as below (where N = 50,000).
 
 $$
 \begin{aligned} 
-\sigma_{people}^2 = \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}\\
+\sigma_{people}^2 &= \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}\\
 &= YY\\
 \end{aligned} 
 $$
@@ -31,14 +32,14 @@ Now imagine that we are interested in studying the random sampling process. Spec
 
 [Figure 1A and 1B goes here]
 
-##Population: What’s in a name
+## Population: What’s in a name
 
 Typically, in psychology, when we use the word "population" we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population.  Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA). 
 
 ### Distribution of sample means as a population
 
-Since we are thinking of the distribution of sample means as a population we can calculate a mean a variance for the distribution of sample means.
-The mean of the population of sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)\footnote{I know it doesn't make sense the divided by infinity per se; however, in formal mathematics we would write this up in a different way describing the resulted value as an *expected value*.}.
+Since we are thinking of the distribution of sample means as a population we can calculate a mean and variance for the distribution of sample means.
+The mean of the population of sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)^[I know it doesn't make sense the divide by infinity; however, in formal mathematics we would write this up in a different way describing the resulted value as an *expected value*. I use dividing by infinity simply as a way to show consistency with other formulas with the aim of increasing conceptual clarity at the expense of correct notation.]
 
 $$
 \begin{aligned} 
@@ -46,15 +47,15 @@ $$
 \end{aligned} 
 $$
 
-The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that our conclusion will also apply to Figure 1A because the mean of Figure 1A and Figure 1B will always be the same.
+The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that any conclusion we make about the population mean in Figure 1B will also apply to Figure 1A -- because with sample means the two distributions will always have the same mean.
 
 ## Variance of the distribution of sampling means
 
-**When there is only population mean** there are two approaches ways to calculate the variances of the distribution of sample means. 
+When there is only *one* **population of people** there are two approaches to calculating the variance of the resulting **population of sample means** that will produce the same result.
 
 ### Calculate the variance of infinite sample means
 
-In this first approach, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never have calculate the variance with an infinite number of sample means. Conceptually, however, it’s good to keep this calculation approach in mind - since it reminds us of principles we’ve already learned about the variance of populations. 
+In this first approach, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never obtain an infite number of samples and then calculate the variance for each sample. Conceptually, however, it’s good to keep this calculation approach in mind - since it reminds us of principles we’ve already learned about the variance of populations ^[As noted previously, the notation is incorrect and I should really have expressed this as an expected value to be correct. But for conceptual clarity I divide by infinity to make the linkages to other equations clear.]
 
 $$
 \begin{aligned} 
@@ -62,9 +63,14 @@ $$
 \end{aligned} 
 $$
 
-Notice how this is similar to population formula when we are dealing with people we just use $A$ instead of $N$. When there is only one population this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that in more in future chapters.
+Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we just use $A$ to indicate the number of elements used in the calculation rather than $N$. 
+
+When there is only one population this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that situation in a future chapter.
 
 ### CLT Shortcut with variance and sample size
+
+Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of sample means. There is a "shortcut formula" we can used based on the the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variance of the people heights in the population ($\sigma_{people}^2$).
+
 
 $$
 \begin{aligned} 
