--- a/book.bib
+++ b/book.bib
@@ -462,3 +462,10 @@
   number={1},
   year={2019}
 }
+
+@book{hays1994statistics,
+  title={Statistics (4th edn)},
+  author={Hays, William L},
+  year={1994},
+  publisher={Holt, Rinehart \& Winston, New York}
+}
