--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -6,23 +6,23 @@ output:
 
 # Deep Dive: Sampling Distributions [DRAFT]
 
-Consider a scenario where there is a large university with 50,000 students and we have the heights of all 50,000 students. The mean height  of all 50,000 students is XX and the variance is YY The heights of all the university students are illustrated in Figure 1A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
+Consider a scenario where there is a large university with 50,000 students and we have the heights of all 50,000 students. The mean height  of all 50,000 students is 172.50 and the variance is 156.3236 The heights of all the university students are illustrated in Figure 1A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
 
-The mean of the population people’s heights is calculated as below (where N = 50,000).
+The mean of the population people’s heights (in cm) is calculated as below (where N = 50,000).
 
 $$
 \begin{aligned} 
 \mu_{people} &= \frac{\sum_{i=1}^{N=50000}{X_i}}{N}\\
-&= XX\\
+&= 172.50\\
 \end{aligned} 
 $$
 
-The variance of the population people’s heights is calculated as below (where N = 50,000).
+The variance of the population people’s heights (in cm) is calculated as below (where N = 50,000).
 
 $$
 \begin{aligned} 
 \sigma_{people}^2 &= \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}\\
-&= YY\\
+&= 156.3236\\
 \end{aligned} 
 $$
 
@@ -43,7 +43,8 @@ The mean of the population of sample means is calculated as below. To make thing
 
 $$
 \begin{aligned} 
-\mu_{\bar{x}} = \frac{\sum_{i=1}^{A=\infty}{\bar{x}_i}}{A}
+\mu_{\bar{x}} &= \frac{\sum_{i=1}^{A=\infty}{\bar{x}_i}}{A}\\
+&= 172.50\\
 \end{aligned} 
 $$
 
@@ -74,7 +75,7 @@ Fortunately we don't need to obtain an infinite number of sample means to determ
 
 $$
 \begin{aligned} 
-\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}
+\sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\
 \end{aligned} 
 $$
 
@@ -99,7 +100,7 @@ Show ratio with formulas and numbers
 
 ## Estimating variance of the distribution of sampling means
 
-###Calculate the variance of a set of sample means
+### Calculate the variance of a set of sample means
 
 If we obtain a set of sample means from this population of sample means (i.e., distribution of sample mean) we can use those to estimate the variance of the distribution of sample mean. We use the lower case “a” to represent the number of sample means.  Recall, the when we use a subset of the elements of the population (i.e., population of sample means) to estimate the variance of the full population we need to use a “-1” in the denominator - see previous chapter. 
 
@@ -125,7 +126,7 @@ Thus, our estimated variance of the distribution of sample means is the followin
 
 
 
-###CLT Shortcut with estimated variance and sample size
+### CLT Shortcut with estimated variance and sample size
 
 Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on central limit theorem. That formula is presented below.
 
@@ -144,7 +145,7 @@ Armed with the estimate of the variance of the people in the population we can u
 
 
 
- ### Ratio comparison of two approaches
+### Ratio comparison of two approaches
 
 We revisit the ratio comparison approach and see that we are using estimates that the 
 
