--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -60,7 +60,8 @@ In this first approach, we use an infinite number of sample means and simply cal
 
 $$
 \begin{aligned} 
-\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}
+\sigma_{\bar{x}}^2 &= \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}\\
+&= 6.252944\\
 \end{aligned} 
 $$
 
@@ -70,24 +71,19 @@ When there is only one population this formula will reflect variability in sampl
 
 ### CLT Shortcut with variance and sample size
 
-Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). You can see the shortcut formula below:
-
-
+Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). 
 $$
 \begin{aligned} 
-\sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\
+\sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\\
+&= \frac{156.3236}{25}\\
+&= 6.252944\\
 \end{aligned} 
 $$
 
 
-It's important to realize that the reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
+The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
 
-
-
-
-
-This approach is unrealistic because we never know sigma2.
-It’s helpful moving forward to think of this formula as representing the variability due to random sample. No matter the situation - this formula will always reflect the variability in sample means due ONLY to random sampling.
+It’s helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the variability due to random sample. No matter the situation - this formula will always reflect the variability in sample means due ONLY to random sampling.
 
 
 ### Ratio comparison of two approaches
