--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -88,11 +88,29 @@ It’s helpful, moving forward to, think of this formula ($\frac{\sigma_{people}
 
 ### Ratio comparison of two approaches
 
-Show ratio is one. When you have all elements of the population these two approaches will produce **exactly** the same result. Obviously, neither can be used to determine the variance per se with real world data. The fist because can’t use an infinite number of samples and the second because we can’t know the population variance. However, as we see below they both can we used to **estimate** the variance of the distribution of sample means. 
+Thus, far we have calculated the variance of the distribution of sample means using two different approaches.
 
-Show ratio with formulas and numbers
+1. variance of sample means calculated using sample means
+2. variance of sample means calculated using CLT shortcut formula
+
+Although we can just look the numbers resulting from these two approaches and compare them, that's not how statisticians typically handle comparisons. The approaches used by statisticians to compare two number is to create a ratio. That is one number is divided by the other number. If the two numbers are the same the ratio will be 1.00.  
+
+You can see the ratio comparing these two approaches below is 1.00 - so we conclude two approaches produced the same result. 
 
 
+$$
+\begin{aligned} 
+\text{ratio comparing approaches} &= \frac{\text{variance of sample means calculated using sample means}}{\text{variance of sample means calculated using CLT shortcut formula}}\\
+&=\frac{\frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}}{\frac{\sigma_{people}^2}{n}}\\
+&=\frac{6.252944}{6.252944}\\
+&= 1.00\\
+\end{aligned} 
+$$
+
+
+In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually calculate this variance we needed an infinite number of sample mean (approach 1) or knowledge of the population variance (approach 2). Both are unrealistic approaches to determining this value.
+
+In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
 
 ## Estimating variance of the distribution of sampling means
 
