--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -108,7 +108,7 @@ $$
 
 In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually calculate this variance we needed an infinite number of sample means (approach 1) or knowledge of the population variance (approach 2). Both are unrealistic approaches to determining this value.
 
-In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
+In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
 
 ## Estimating variance of the distribution of sampling means
 
