--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -112,7 +112,7 @@ In the next section, below, we recognize that we can likely never know or calcul
 
 ## Estimating variance of the distribution of sampling means
 
-### Calculate the variance of a set of sample means
+### Estimated variance from a set of sample means
 
 If we obtain a set of sample means from this population of sample means (i.e., distribution of sample mean) we can use those to estimate the variance of the distribution of sample mean. We use the lower case "a" to represent the number of sample means. Recall, the when we use a subset of the elements of the population (i.e., population of sample means) to estimate the variance of the full population we need to use a "-1" in the denominator - see previous chapter.
 
@@ -132,7 +132,7 @@ So our estimate of the variance of distribution of sample means is presented bel
 
 Thus, our estimated variance of the distribution of sample means is the following:
 
-### CLT Shortcut with estimated variance and sample size
+### Estimated variance from the CLT shortcut formula
 
 Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on central limit theorem. That formula is presented below.
 
